--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ pico_enable_stdio_usb(main 0)
 
 # Add the standard library to the build
 target_link_libraries(main
-        pico_stdlib)
+        pico_stdlib hardware_pio)
 
 # Add the standard include files to the build
 target_include_directories(main PRIVATE
