--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(main main.c )
+add_executable(main main.c inc/ssd1306.c)
 
 pico_set_program_name(main "main")
 pico_set_program_version(main "0.1")
@@ -46,7 +46,7 @@ pico_enable_stdio_usb(main 0)
 
 # Add the standard library to the build
 target_link_libraries(main
-        pico_stdlib hardware_pio)
+        pico_stdlib)
 
 # Add the standard include files to the build
 target_include_directories(main PRIVATE
@@ -55,7 +55,7 @@ target_include_directories(main PRIVATE
 
 # Add any user requested libraries
 target_link_libraries(main 
-        
+        hardware_pio hardware_i2c
         )
 
 pico_add_extra_outputs(main)
