--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(main main.c src/inc/ssd1306.c src/led_control.c src/sprites_numbers.c)
+add_executable(main main.c src/inc/ssd1306.c src/matriz_led_control.c src/sprites_numbers.c)
 
 pico_set_program_name(main "main")
 pico_set_program_version(main "0.1")
